--- a/src/index.html
+++ b/src/index.html
@@ -2,35 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>QuickHelp Nigeria</title>
+  <title>EliezerMatch</title>
   <base href="/" />
-  <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
-  <link rel="icon" type="image/png" href="assets/icon/icon.png" />
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 </head>
 <body>
   <app-root></app-root>
   <script src="cordova.js"></script>
-  <script>
-    document.addEventListener('deviceready', onDeviceReady, false);
-
-    function onDeviceReady() {
-      // Cordova is now fully loaded
-      console.log('Device is ready');
-
-      // Your app initialization code here
-      // For example, initialize plugins, set up event listeners, etc.
-
-      // Hide splashscreen when your app is fully loaded and ready
-      // You might want to move this to your app's main component or service
-      // if you have more complex initialization logic
-      navigator.splashscreen.hide();
-    }
-  </script>
 </body>
 </html>
